# asthaseo

./: .dockerignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  seo_insight.db
app/: change_detector.py  db.py  emailing.py  main.py  models.py  seo.py
app/templates/: amp_compare.html  base.html  index.html  logo.avif  scheduled.html
seo_insight_python.egg-info/: PKG-INFO  SOURCES.txt  requirements.txt
static/: script.js  style.css
